cmake_minimum_required(VERSION 3.20)
project(Labo3)

set(CMAKE_CXX_STANDARD 11)

add_executable(Labo3 main.cpp person.cpp person.hpp bank.cpp bank.hpp boat.cpp boat.hpp controller.cpp controller.hpp container.cpp container.hpp policeman.cpp policeman.hpp thief.cpp thief.hpp parent.cpp parent.hpp child.cpp child.hpp)
